<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="E_PressureState" Id="{c25a9601-e125-4f1e-8734-ed2a641d27b1}">
    <Declaration><![CDATA[TYPE E_PressureState :
(
	//Valid States (Positive)
	Valid := gc_GaugeValidState, // gc_GaugeValidState set in "Global Variable Folder: Constants"
	ValidHi	:= 1, //gc_GaugeValidState + 1,
	ValidLo	:= 2, //gc_GaugeValidState + 2,
	
	// Invalid states
	PressInvalid	:= -1, //gc_GaugeValidState - 1,
	GaugeDisconnected	:=	-2, //gc_GaugeValidState -2,
	OoR	:= -6, //gc_GaugeValidState -6,
	// Ion gauges
	Off		:= -3, //gc_GaugeValidState - 3,
	Starting	:= -4 //gc_GaugeValidState - 4
) INT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>